--- a/Main/index.html
+++ b/Main/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="/high-scores.html">View High Scores</a>
+            <p id="timer">Time: </p>
+        </nav>
+    </header>
+
+    <main class="content">
+        <section id="start-screen" class="flex-column flex-center">
+            <h1>Full-Stack Coding Quiz Challenge</h1>
+            <p>Do your best to answer as many questions correctly as you can before the time expires! Good Luck!</p>
+            <button id="start">Start Quiz</button>
+        </section>
+
+    </main>
     
 </body>
 </html>
