--- a/Main/index.html
+++ b/Main/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="/high-scores.html">View High Scores</a>
+            <a href="/high-scores.html" class="high-scores">View High Scores</a>
             <p id="timer">Time: </p>
         </nav>
     </header>
@@ -20,7 +20,8 @@
         <section id="start-screen" class="flex-column flex-center">
             <h1>Full-Stack Coding Quiz Challenge</h1>
             <p>Do your best to answer as many questions correctly as you can before the time expires! Good Luck!</p>
-            <button id="start">Start Quiz</button>
+            <!-- create a tag for the star button link -->
+            <a href="quiz.html" class="start-button">Start</a>
         </section>
 
     </main>
