adding more CSS styling logic for the start page

--- a/Main/index.html
+++ b/Main/index.html
@@ -21,7 +21,9 @@
     <main class="content">
         <section id="start-screen" class="flex-column flex-center">
             <h1>Full-Stack Coding Quiz Challenge</h1>
-            <p>Do your best to answer as many questions correctly as you can before the time expires! Good Luck!</p>
+            <h2>
+                Do your best to answer as many questions correctly as you can before the time expires! Good Luck!
+            </h2>
             <!-- create a tag for the star button link -->
             <a href="quiz.html" class="start-button">Start</a>
         </section>
