changed the color scheme of the start page and added some hover logic to the start button

--- a/Main/index.html
+++ b/Main/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a href="/high-scores.html" class="high-scores">View High Scores</a>
+            <a href="/high-scores.html" id="high-scores">View High Scores</a>
             <p id="timer">Time: </p>
         </nav>
     </header>
