added button and questions variables allowing for the textContent to be altered

--- a/Main/index.html
+++ b/Main/index.html
@@ -28,7 +28,7 @@
             <button class="start-button">Start</button>
         </section>
         <section id="question-screen" class="flex-center flex-column">
-            <h1>question</h1>
+            <h1 id="question">question</h1>
             <button id="a" class="answer">a</button>
             <button id="b" class="answer">b</button>
             <button id="c" class="answer">c</button>
