--- a/Main/index.html
+++ b/Main/index.html
@@ -34,6 +34,9 @@
             <button id="c" class="answer">c</button>
             <button id="d" class="answer">d</button>
         </section>
+        <section id="high-scores-screen" class="flex-column flex-center">
+            <h1>High Scores</h1>
+        </section>
 
     </main>
     <script src="./assets/js/quiz.js"></script>
