--- a/Main/index.html
+++ b/Main/index.html
@@ -34,8 +34,13 @@
             <button id="c" class="answer">c</button>
             <button id="d" class="answer">d</button>
         </section>
-        <section id="high-scores-screen" class="flex-column flex-center">
-            <h1>High Scores</h1>
+        <section id="enter-initials" class="flex-column flex-center">
+            <h1>Enter Your Initials</h1>
+            <h3>Your Score: </h3>
+            <input type="text" id="initials" name="initials">
+            <section>
+                <button>Submit</button>
+            </section>
         </section>
 
     </main>
