added JS logic to log the users score and initials into local storage

--- a/Main/index.html
+++ b/Main/index.html
@@ -35,11 +35,11 @@
             <button id="d" class="answer">d</button>
         </section>
         <section id="enter-initials" class="flex-column flex-center">
-            <h1>Enter Your Initials</h1>
-            <h3>Your Score: </h3>
+            <h1 id="final-score"></h1>
+            <h2>Enter Your Initials</h2>
             <input type="text" id="initials" name="initials">
             <section>
-                <button>Submit</button>
+                <button id="initial-submit">Submit</button>
             </section>
         </section>
 
