working on function to display the high score and initials from local storage.

--- a/Main/index.html
+++ b/Main/index.html
@@ -42,6 +42,12 @@
                 <button id="initial-submit">Submit</button>
             </section>
         </section>
+        <section id="high-scores-screen">
+            <h1>High Scores</h1>
+            <section id="scores-list">
+
+            </section>
+        </section>
 
     </main>
     <script src="./assets/js/quiz.js"></script>
