after hours of wondering why the .append wasn't working, I discovered I could not see it because the text was black... the text in the CSS is now white.

--- a/Main/index.html
+++ b/Main/index.html
@@ -44,9 +44,9 @@
         </section>
         <section id="high-scores-screen">
             <h1>High Scores</h1>
-            <section id="scores-list">
-
-            </section>
+            <ul id="scores-list" class="flex-center flex-column">
+                <li id="list-element"></li>
+            </ul>
         </section>
 
     </main>
