--- a/Main/index.html
+++ b/Main/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <button id="high-scores">View High Scores</button>
+            <button id="high-scores">High Scores</button>
             <p id="timer">Time: </p>
         </nav>
     </header>
@@ -22,7 +22,7 @@
         <section id="start-screen" class="flex-column flex-center">
             <h1>Full-Stack Coding Quiz Challenge</h1>
             <h2>
-                Do your best to answer as many questions correctly as you can before the time expires! Good Luck!
+                Do your best to answer as many questions correctly as you can before the time expires! Good Luck! Press the 'START' button to begin, Press 'HIGH SCORES' to view your scores.
             </h2>
             <!-- create a tag for the star button link -->
             <button class="start-button">Start</button>
